--- a/histogram2.ipynb
+++ b/histogram2.ipynb
@@ -87,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1fc6d827350>"
+       "<matplotlib.image.AxesImage at 0x22ec4f1fd10>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -122,7 +122,7 @@
     "equ = cv.equalizeHist(img)\n",
     "res = np.hstack((img,equ)) #stacking images side-by-side\n",
     "\n",
-    "plt.imshow(res, cmap='gray')"
+    "plt.imshow(res, cmap='gray') # camp: https://matplotlib.org/3.1.0/tutorials/colors/colormaps.html"
    ]
   },
   {
