--- a/fourier_transform.ipynb
+++ b/fourier_transform.ipynb
@@ -11,7 +11,17 @@
     "傅里叶变换用于分析各种滤波器的频率特性。更直观的是，对于正弦信号，如果幅度在短时间内变化得这么快，可以说是高频信号。如果变化缓慢，则为低频信号。您可以将同样的想法扩展到图像。图像中的振幅在哪里变化很大？在边缘点，或噪音。因此，我们可以说，边缘和噪声是图像中的高频内容。如果振幅没有太大变化，则为低频分量。\n",
     "\n",
     "- 二维离散傅立叶变换（DFT）\n",
-    "- 快速傅立叶变换（FFT）"
+    "- 快速傅立叶变换（FFT）\n",
+    "\n",
+    "傅里叶变换在图像处理中有以下几个常见的应用：\n",
+    "\n",
+    "- 频域滤波：通过将图像转换到频域，可以使用滤波器来增强或抑制特定频率的信息。例如，可以使用低通滤波器来平滑图像并去除高频噪声，或者使用高通滤波器来增强图像的边缘信息。\n",
+    "\n",
+    "- 图像去噪：通过在频域中滤除高频噪声，可以减少图像中的噪声。这可以通过将图像转换到频域，将高频噪声设置为零，然后将图像转换回时域来实现。\n",
+    "\n",
+    "- 特征提取：傅里叶变换可以帮助提取图像中的频率特征，如纹理、周期性模式等。通过分析频域中的幅度谱和相位谱，可以得到关于图像中不同频率分量的信息。\n",
+    "\n",
+    "- 图像压缩：傅里叶变换在图像压缩中起着重要的作用。通过将图像转换到频域，可以利用频域的特性来减少图像的数据量，从而实现图像的压缩。"
    ]
   },
   {
